--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/test-utils": "^2.0.0-rc.18",
     "babel-jest": "24.x.x",
     "jest": "26.x.x",
+    "jest-transform-stub": "^2.0.0",
     "vite": "^2.9.0",
     "vue-jest": "^5.0.0-0"
   }
